fix: align cards

--- a/styles/main.css
+++ b/styles/main.css
@@ -266,7 +266,10 @@ aside hr {
 #content .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+
   align-items: center;
+  justify-content: center;
+  justify-items: center;
 
   gap: 3rem;
 }
